tests/models/enum/named/u8/pass/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2)]
        u8
    ),
}
fn main() {}
